[gd_scene load_steps=3 format=3 uid="uid://pdbbxowv0d4p"]

[ext_resource type="Script" path="res://scripts/fight_ui.gd" id="1_gmjmh"]
[ext_resource type="Theme" uid="uid://dn7uhmqeylu42" path="res://misc/ui.theme" id="2_vrryk"]

[node name="FightUI" type="CanvasLayer"]
visible = false
script = ExtResource("1_gmjmh")

[node name="C" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_vrryk")

[node name="Pet" type="Button" parent="C"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.523438
anchor_top = 0.645833
anchor_right = 0.576563
anchor_bottom = 0.710417
pivot_offset = Vector2(17, 15)
text = "pet"
metadata/_edit_use_anchors_ = true

[node name="Kick" type="Button" parent="C"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.559375
anchor_top = 0.760417
anchor_right = 0.620313
anchor_bottom = 0.825
pivot_offset = Vector2(20, 15)
text = "kick"
metadata/_edit_use_anchors_ = true

[node name="Sticker" type="Button" parent="C"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.626562
anchor_top = 0.879167
anchor_right = 0.759375
anchor_bottom = 0.94375
pivot_offset = Vector2(40, 15)
text = "sticker up"
metadata/_edit_use_anchors_ = true

[node name="Progress" type="Label" parent="C"]
layout_mode = 0
offset_left = 337.0
offset_top = 95.0
offset_right = 377.0
offset_bottom = 118.0
text = "0%"

[node name="Health" type="Label" parent="C"]
layout_mode = 0
offset_left = 144.0
offset_top = 283.0
offset_right = 184.0
offset_bottom = 306.0
text = "20"

[connection signal="pressed" from="C/Pet" to="." method="_on_pet_pressed"]
[connection signal="pressed" from="C/Kick" to="." method="_on_kick_pressed"]
[connection signal="pressed" from="C/Sticker" to="." method="_on_sticker_pressed"]
